# BozzioCarCanSimulator

./: .gitignore  DOCUMENTATION_SUMMARY.md  README.md  SETUP_RELEASE.md  debug_serial_ping.py  decode_vwt7_messages.py  esp32_controller.py  esp32_monitor.py  pcan_baud_test.py  pcan_reader.py  sdkconfig  test_basic_functionality.py  test_can_monitor_all.py  test_esp32_control.py  test_minimal_ping.py  test_pcan_connection.py  test_serial_raw.py  test_simple_serial.py  test_t6_parser_verification.py  test_vwt6_implementation.py  test_vwt7_messages.py
.github/workflows/: README.md  docs.yml
components/lvgl__lvgl/env_support/cmake/: custom.cmake  esp.cmake
components/lvgl__lvgl/env_support/cmsis-pack/: lv_conf_cmsis.h
components/lvgl__lvgl/env_support/rt-thread/: lv_rt_thread_conf.h
docs/: Makefile  README.md  api_reference.rst  build_deployment.rst  conf.py  configuration.rst  getting_started.rst  hardware_setup.rst  index.rst  requirements.txt  software_architecture.rst  troubleshooting.rst  vehicle_support.rst
main/: BaseMessageGenerator.h  CMakeLists.txt  CarCanController.cpp  CarCanController.h  CarCanGui.cpp  CarCanGui.h  CarCanMessageGenerator.cpp  CarCanMessageGenerator.h  MessageGeneratorFactory.cpp  MessageGeneratorFactory.h  SerialCommandHandler.cpp  SerialCommandHandler.h  VWT6MessageGenerator.cpp  VWT6MessageGenerator.h  VWT7MessageGenerator.cpp  VWT7MessageGenerator.h  common.h  lvgl_port.c  main.cpp  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
